<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10.0dip"
    android:layout_marginStart="10.0dip"
    android:layout_marginEnd="10.0dip"
    android:layout_marginRight="10.0dip"
    android:orientation="vertical">
    <ScrollView
        android:layout_marginTop="10.0dip"
        android:layout_marginBottom="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:fadingEdge="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_width="wrap_content"
                android:layout_height="10.0dip"/>
            <LinearLayout
                android:id="@+id/linearLayout_setting_feedback"
                android:orientation="vertical"
                android:background="@drawable/layout_press"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginBottom="5dip"
                    android:layout_marginStart="10.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:text="@string/feedback"/>
                <TextView
                    android:textSize="16sp"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginStart="10.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:text="@string/feedback_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="1dip"/>
            <LinearLayout
                android:id="@+id/linearLayout_setting_checkUpdate"
                android:orientation="vertical"
                android:background="@drawable/layout_press"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginBottom="5dip"
                    android:layout_marginStart="10.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:text="@string/checkUpdate"/>
                <TextView
                    android:textSize="16sp"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginStart="10.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:text="@string/checkUpdate_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="1dip"/>
            <LinearLayout
                android:id="@+id/linearLayout_setting_about"
                android:orientation="vertical"
                android:background="@drawable/layout_press"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginBottom="5dip"
                    android:layout_marginStart="10.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:text="@string/about"/>
                <TextView
                    android:textSize="16sp"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginStart="10.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:text="@string/about_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="1dip"/>
            <LinearLayout
                android:id="@+id/linearLayout_setting_closeAD"
                android:orientation="vertical"
                android:background="@drawable/layout_press"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginBottom="5dip"
                    android:layout_marginStart="10.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:text="@string/closeAD"/>
                <TextView
                    android:textSize="16sp"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginStart="10.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:text="@string/closeAD_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="1dip"/>
            <LinearLayout
                android:id="@+id/linearLayout_setting_aboutAuthor"
                android:orientation="vertical"
                android:background="@drawable/layout_press"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginBottom="5dip"
                    android:layout_marginStart="10.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:text="@string/aboutAuthor"/>
                <TextView
                    android:textSize="16sp"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginStart="10.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:text="@string/aboutAuthor_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>